--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,5 +33,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'United States -- History -- Revolution, 1775-1783 -- Juvenile fiction'
+- GITenberg
 title: 'Corporal ''Lige''s Recruit: A Story of Crown Point and Ticonderoga'
 url: http://www.gutenberg.org/ebooks/33110
